[package]
name = "cargo-licenses"
version = "0.1.0"
edition = "2021"
description = "A tool to audit license information for Rust projects"
license = "MIT OR Apache-2.0"
repository = "https:/github.com/jhenrique04/cargo-licenses"
readme = "README.md"


[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
semver = "1.0"
